Replace all hexdummy-specific values with placeholders

--- a/template/build.gradle.jinja
+++ b/template/build.gradle.jinja
@@ -149,23 +149,12 @@ ext.getLatestChangelog = {
     return changelog.trim()
 }
 
-ext.bookPath = "data/hexdummy/patchouli_books/hexdummybook"
+ext.bookPath = "data/{{ modid }}/patchouli_books/{{ modid }}book"
 
 tasks.register("viewLatestChangelog") {
     group "documentation"
     description "Print the topmost single version section from the full CHANGELOG.md file."
     doLast {
         println(getLatestChangelog())
-    }
-}
-
-tasks.register("generateOnlineNotebookPage") {
-    group "documentation"
-    description "Pulls the addon's Hex Notebook documentation from the project and generates a page in Hex Casting's online documentation style, at doc/out.html."
-
-    exec {
-        workingDir "${rootDir}"
-        executable 'python'
-        args "doc/collate_data.py", "common/src/main/resources", "doc/HexCastingResources", "hexdummy", "hexdummybook", "doc/template.html", "doc/out.html"
     }
 }
