--- a/template/{{ __common }}/build.gradle.jinja
+++ b/template/{{ __common }}/build.gradle.jinja
@@ -8,7 +8,7 @@ architectury {
 }
 
 loom {
-    accessWidenerPath = file("src/main/resources/hexdummy.accesswidener")
+    accessWidenerPath = file("src/main/resources/{{ modid }}.accesswidener")
 }
 
 dependencies {
