--- a/template/{{ __common }}/src/main/java/{{ __package_path }}/casting/patterns/math/OpSignum.kt.jinja
+++ b/template/{{ __common }}/src/main/java/{{ __package_path }}/casting/patterns/math/OpSignum.kt.jinja
@@ -1,4 +1,4 @@
-package net.hexdummy.casting.patterns.math
+package {{ package }}.casting.patterns.math
 
 import at.petrak.hexcasting.api.spell.ConstMediaAction
 import at.petrak.hexcasting.api.spell.asActionResult
