--- a/template/{{ __common }}/src/main/java/{{ __package_path }}/{{ classname }}.java.jinja
+++ b/template/{{ __common }}/src/main/java/{{ __package_path }}/{{ classname }}.java.jinja
@@ -1,8 +1,8 @@
-package net.hexdummy;
+package {{ package }};
 
-import net.hexdummy.registry.HexDummyIotaTypeRegistry;
-import net.hexdummy.registry.HexDummyItemRegistry;
-import net.hexdummy.registry.HexDummyPatternRegistry;
+import {{ package }}.registry.{{ classname }}IotaTypeRegistry;
+import {{ package }}.registry.{{ classname }}ItemRegistry;
+import {{ package }}.registry.{{ classname }}PatternRegistry;
 import net.minecraft.util.Identifier;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
@@ -11,19 +11,19 @@ import org.apache.logging.log4j.Logger;
  * This is effectively the loading entrypoint for most of your code, at least
  * if you are using Architectury as intended.
  */
-public class HexDummy {
-    public static final String MOD_ID = "hexdummy";
+public class {{ classname }} {
+    public static final String MOD_ID = "{{ modid }}";
     public static final Logger LOGGER = LogManager.getLogger(MOD_ID);
 
 
     public static void init() {
-        LOGGER.info("Hex Dummy says hello!");
+        LOGGER.info("{{ display_name }} says hello!");
 
-        HexDummyItemRegistry.init();
-        HexDummyIotaTypeRegistry.init();
-        HexDummyPatternRegistry.init();
+        {{ classname }}ItemRegistry.init();
+        {{ classname }}IotaTypeRegistry.init();
+        {{ classname }}PatternRegistry.init();
 
-        LOGGER.info(DummyAbstractions.getConfigDirectory().toAbsolutePath().normalize().toString());
+        LOGGER.info({{ classname }}Abstractions.getConfigDirectory().toAbsolutePath().normalize().toString());
     }
 
     /**
