--- a/template/{{ __common }}/src/main/java/{{ __package_path }}/{{ classname }}Client.java.jinja
+++ b/template/{{ __common }}/src/main/java/{{ __package_path }}/{{ classname }}Client.java.jinja
@@ -1,9 +1,9 @@
-package net.hexdummy;
+package {{ package }};
 
 /**
  * Common client loading entrypoint.
  */
-public class HexDummyClient {
+public class {{ classname }}Client {
     public static void init() {
 
     }
