--- a/template/{{ __common }}/src/main/resources/data/{{ modid }}/patchouli_books/{{ modid }}book/en_us/entries/patterns/dummy_actions.json.jinja
+++ b/template/{{ __common }}/src/main/resources/data/{{ modid }}/patchouli_books/{{ modid }}book/en_us/entries/patterns/dummy_actions.json.jinja
@@ -1,5 +1,5 @@
 {
-  "name": "hexdummy.entry.dummy_actions",
+  "name": "{{ modid }}.entry.dummy_actions",
   "category": "hexcasting:patterns",
   "icon": "minecraft:birch_sign",
   "sortnum": 0,
@@ -8,11 +8,11 @@
   "pages": [
     {
       "type": "hexcasting:pattern",
-      "op_id": "hexdummy:signum",
-      "anchor": "hexdummy:signum",
+      "op_id": "{{ modid }}:signum",
+      "anchor": "{{ modid }}:signum",
       "input": "number",
       "output": "number",
-      "text": "hexdummy.page.dummy_actions.signum"
+      "text": "{{ modid }}.page.dummy_actions.signum"
     }
   ]
 }
