--- a/template/{{ __fabric }}/build.gradle.jinja
+++ b/template/{{ __fabric }}/build.gradle.jinja
@@ -137,7 +137,7 @@ publishMods {
     modLoaders.add("quilt")
 
     version = project.version + "-fabric"
-    displayName = "Hex Dummy $project.version [Fabric]"
+    displayName = "{{ display_name }} $project.version [Fabric]"
 
     // Uncomment your desired platform(s)
 //    curseforge {
