--- a/template/{{ __fabric }}/src/main/java/{{ __package_path }}/fabric/{{ classname }}Fabric.java.jinja
+++ b/template/{{ __fabric }}/src/main/java/{{ __package_path }}/fabric/{{ classname }}Fabric.java.jinja
@@ -1,7 +1,7 @@
-package net.hexdummy.fabric;
+package {{ package }}.fabric;
 
 import net.fabricmc.api.ModInitializer;
-import net.hexdummy.HexDummy;
+import {{ package }}.{{ classname }};
 
 /**
  * This is your loading entrypoint on fabric(-likes), in case you need to initialize
@@ -11,9 +11,9 @@ import net.hexdummy.HexDummy;
  * Feel free to check out the <a href="https://github.com/architectury/architectury-templates">Architectury templates</a>
  * if you want to see how to add quilt-specific code.
  */
-public class HexDummyFabric implements ModInitializer {
+public class {{ classname }}Fabric implements ModInitializer {
     @Override
     public void onInitialize() {
-        HexDummy.init();
+        {{ classname }}.init();
     }
 }
