--- a/template/{{ __forge }}/src/main/resources/pack.mcmeta.jinja
+++ b/template/{{ __forge }}/src/main/resources/pack.mcmeta.jinja
@@ -1,6 +1,6 @@
 {
   "pack": {
-    "description": "Describe me!",
+    "description": "{{ display_name }} Resources",
     "pack_format": 9
   }
 }
