--- a/template/gradle.properties.jinja
+++ b/template/gradle.properties.jinja
@@ -1,17 +1,22 @@
 # non-minecraft values
 org.gradle.jvmargs=-Xmx2048M
 jetbrainsAnnotationsVersion=23.0.0
+
 # gradle kotlin jvm plugin breaks without this
 kotlin.stdlib.default.dependency=false
+
 # needed for mixins to work for forge
 asmVersion=9.4
+
 # mod info
-modID=hexdummy
-modVersion=0.0.1
-mavenGroup=net.hexdummy
+modID={{ modid }}
+modVersion={{ initial_version }}
+mavenGroup={{ package }}
+
 # publishing
 curseforgeId=
 modrinthId=
+
 # core
 minecraftVersion=1.19.2
 yarnMappingsVersion=1.19.2+build.28:v2
@@ -22,8 +27,9 @@ fabricKotlinVersion=1.9.0+kotlin.1.8.0
 forgeVersion=1.19.2-43.2.11
 forgeKotlinVersion=3.12.0
 architecturyVersion=6.5.85
+
 # hex casting
-hexcastingVersion=0.10.3
+hexcastingVersion={{ __hexcasting_version }}
 paucalVersion=0.5.0
 patchouliVersion=77
 cardinalComponentsVersion=5.0.2
