--- a/template/{{ __common }}/src/main/java/{{ __package_path }}/mixin/{{ classname }}Mixin.java.jinja
+++ b/template/{{ __common }}/src/main/java/{{ __package_path }}/mixin/{{ classname }}Mixin.java.jinja
@@ -1,4 +1,4 @@
-package net.hexdummy.mixin;
+package {{ package }}.mixin;
 
 import net.minecraft.client.gui.screen.TitleScreen;
 import org.spongepowered.asm.mixin.Mixin;
@@ -7,9 +7,9 @@ import org.spongepowered.asm.mixin.injection.Inject;
 import org.spongepowered.asm.mixin.injection.callback.CallbackInfo;
 
 @Mixin(TitleScreen.class)
-public class DummyMixin {
+public class {{ classname }}Mixin {
     @Inject(at = @At("HEAD"), method = "init()V")
     private void init(CallbackInfo info) {
-        System.out.println("Hello from hexdummy common mixin!");
+        System.out.println("Hello from {{ modid }} common mixin!");
     }
 }
