--- a/template/{{ __common }}/src/main/resources/assets/{{ modid }}/lang/en_us.json.jinja
+++ b/template/{{ __common }}/src/main/resources/assets/{{ modid }}/lang/en_us.json.jinja
@@ -1,13 +1,13 @@
 {
-  "item.hexdummy.dummy_item": "Dummy Item",
-  "hexcasting.spell.hexdummy:congrats": "Congrats",
-  "hexcasting.spell.hexdummy:signum": "Signum Purification",
-  "hexcasting.spell.book.hexdummy:congrats": "Dum. Spell Actn.",
-  "hexcasting.spell.book.hexdummy:signum": "Dum. Actn.",
-  "hexdummy.entry.dummy_spells": "Dummy Spells",
-  "hexdummy.entry.dummy_actions": "Dummy Actions",
-  "hexdummy.page.dummy_spells.congrats": "Accepts a player entity, tells them they are doing a good job.",
-  "hexdummy.page.dummy_actions.signum": "Accepts a number, returns -1 if it is negative, 0 if 0, 1 if positive.",
-  "text.hexdummy.congrats": "Good job, %1$s!",
-  "text.hexdummy.congrats.player": "a Player"
+  "item.{{ modid }}.dummy_item": "Dummy Item",
+  "hexcasting.spell.{{ modid }}:congrats": "Congrats",
+  "hexcasting.spell.{{ modid }}:signum": "Signum Purification",
+  "hexcasting.spell.book.{{ modid }}:congrats": "Dum. Spell Actn.",
+  "hexcasting.spell.book.{{ modid }}:signum": "Dum. Actn.",
+  "{{ modid }}.entry.dummy_spells": "Dummy Spells",
+  "{{ modid }}.entry.dummy_actions": "Dummy Actions",
+  "{{ modid }}.page.dummy_spells.congrats": "Accepts a player entity, tells them they are doing a good job.",
+  "{{ modid }}.page.dummy_actions.signum": "Accepts a number, returns -1 if it is negative, 0 if 0, 1 if positive.",
+  "text.{{ modid }}.congrats": "Good job, %1$s!",
+  "text.{{ modid }}.congrats.player": "a Player"
 }
