--- a/template/{{ __common }}/src/main/resources/data/{{ modid }}/patchouli_books/{{ modid }}book/en_us/entries/patterns/spells/dummy_spells.json.jinja
+++ b/template/{{ __common }}/src/main/resources/data/{{ modid }}/patchouli_books/{{ modid }}book/en_us/entries/patterns/spells/dummy_spells.json.jinja
@@ -1,5 +1,5 @@
 {
-  "name": "hexdummy.entry.dummy_spells",
+  "name": "{{ modid }}.entry.dummy_spells",
   "category": "hexcasting:patterns/spells",
   "icon": "minecraft:spruce_sign",
   "sortnum": 0,
@@ -8,11 +8,11 @@
   "pages": [
     {
       "type": "hexcasting:pattern",
-      "op_id": "hexdummy:congrats",
-      "anchor": "hexdummy:congrats",
+      "op_id": "{{ modid }}:congrats",
+      "anchor": "{{ modid }}:congrats",
       "input": "entity",
       "output": "",
-      "text": "hexdummy.page.dummy_spells.congrats"
+      "text": "{{ modid }}.page.dummy_spells.congrats"
     }
   ]
 }
