--- a/template/{{ __common }}/src/main/resources/{{ modid }}-common.mixins.json.jinja
+++ b/template/{{ __common }}/src/main/resources/{{ modid }}-common.mixins.json.jinja
@@ -1,10 +1,10 @@
 {
   "required": true,
-  "package": "net.hexdummy.mixin",
+  "package": "{{ package }}.mixin",
   "compatibilityLevel": "JAVA_17",
   "minVersion": "0.8",
   "client": [
-    "DummyMixin"
+    "{{ classname }}Mixin"
   ],
   "mixins": [
   ],
