--- a/template/{{ __forge }}/src/main/resources/{{ modid }}.mixins.json.jinja
+++ b/template/{{ __forge }}/src/main/resources/{{ modid }}.mixins.json.jinja
@@ -1,6 +1,6 @@
 {
   "required": true,
-  "package": "net.hexdummy.forge.mixin",
+  "package": "{{ package }}.forge.mixin",
   "compatibilityLevel": "JAVA_17",
   "minVersion": "0.8",
   "client": [
