Fix broken paths, missing changelog, and some incorrect template variables

--- a/template/gradle.properties.jinja
+++ b/template/gradle.properties.jinja
@@ -29,7 +29,7 @@ forgeKotlinVersion=3.12.0
 architecturyVersion=6.5.85
 
 # hex casting
-hexcastingVersion={{ __hexcasting_version }}
+hexcastingVersion={{ hexcasting_version }}
 paucalVersion=0.5.0
 patchouliVersion=77
 cardinalComponentsVersion=5.0.2
