--- a/template/settings.gradle.jinja
+++ b/template/settings.gradle.jinja
@@ -7,8 +7,8 @@ pluginManagement {
     }
 }
 
-include("common")
-include("fabric")
-include("forge")
+include("{{ common_path }}")
+include("{{ fabric_path }}")
+include("{{ forge_path }}")
 
 rootProject.name = "{{ modid }}"
