--- a/template/{{ common_path }}/build.gradle.jinja
+++ b/template/{{ common_path }}/build.gradle.jinja
@@ -1,7 +1,7 @@
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.8.0'
 }
-archivesBaseName = getArtifactId("common")
+archivesBaseName = getArtifactId("{{ common_path }}")
 
 architectury {
     common(project.enabledPlatforms.split(","))
