--- a/template/{{ fabric_path }}/src/main/resources/fabric.mod.json.jinja
+++ b/template/{{ fabric_path }}/src/main/resources/fabric.mod.json.jinja
@@ -8,7 +8,7 @@
     "{{ author }}"
   ],
   "contact": {
-    "homepage": "{{ homepage }}",
+    "homepage": "{{ homepage_url }}",
     "sources": "{{ sources_url }}"
   },
   "license": "MIT",
@@ -32,6 +32,6 @@
     "fabric-api": "*",
     "fabric-language-kotlin": ">=1.9.0+kotlin.1.8.0",
     "architectury": ">=6.5.85",
-    "hexcasting": ">={{ __hexcasting_version }}"
+    "hexcasting": ">={{ hexcasting_version }}"
   }
 }
