--- a/template/{{ forge_path }}/src/main/resources/META-INF/mods.toml.jinja
+++ b/template/{{ forge_path }}/src/main/resources/META-INF/mods.toml.jinja
@@ -37,6 +37,6 @@ side = "BOTH"
 [[dependencies.{{ modid }}]]
 modId = "hexcasting"
 mandatory = true
-versionRange = "[{{ __hexcasting_version }},)"
+versionRange = "[{{ hexcasting_version }},)"
 ordering = "NONE"
 side = "BOTH"
