--- a/template/build.gradle.jinja
+++ b/template/build.gradle.jinja
@@ -17,19 +17,15 @@ subprojects {
     apply plugin: "org.jetbrains.kotlin.jvm"
     apply plugin: "dev.architectury.loom"
 
-    loom {
-        silentMojangMappingsLicense()
-    }
+    // Uncomment to silence the mojmap license warning
+    // loom {
+    //     silentMojangMappingsLicense()
+    // }
 
     dependencies {
         minecraft "com.mojang:minecraft:${project.minecraftVersion}"
 
-        // Mojmap mappings, Hex Casting itself uses them so you may want to as well
-//        mappings loom.officialMojangMappings()
-
-        // Yarn mappings, if you're unsure then I suggest these over mojmap because of the less restrictive license
-        mappings "net.fabricmc:yarn:1.19.2+build.28:v2"
-
+        mappings {{ mappings }}
         // Or feel free to use any other mappings you prefer
 
         annotationProcessor "org.ow2.asm:asm:${project.asmVersion}"
@@ -99,11 +95,11 @@ allprojects {
 
     tasks.withType(JavaCompile) {
         options.encoding = "UTF-8"
-        options.release = 17
+        options.release = {{ java_version }}
     }
 
     java {
-        java.toolchain.languageVersion = JavaLanguageVersion.of(17)
+        java.toolchain.languageVersion = JavaLanguageVersion.of({{ java_version }})
         java.withSourcesJar()
         java.withJavadocJar()
     }
@@ -114,7 +110,7 @@ allprojects {
 
     tasks.withType(JavaCompile).configureEach {
         it.options.encoding = 'UTF-8'
-        it.options.release = 17
+        it.options.release = {{ java_version }}
     }
 
     // Disables Gradle's custom module metadata from being published to maven. The
