--- a/template/{{ fabric_path }}/src/main/resources/fabric.mod.json.jinja
+++ b/template/{{ fabric_path }}/src/main/resources/fabric.mod.json.jinja
@@ -11,7 +11,7 @@
     "homepage": "{{ homepage_url }}",
     "sources": "{{ sources_url }}"
   },
-  "license": "MIT",
+  "license": "{{ license }}",
   "icon": "icon.png",
   "environment": "*",
   "entrypoints": {
