--- a/template/{{ forge_path }}/src/main/resources/META-INF/mods.toml.jinja
+++ b/template/{{ forge_path }}/src/main/resources/META-INF/mods.toml.jinja
@@ -1,7 +1,7 @@
 modLoader = "javafml"
 loaderVersion = "[43,)"
 #issueTrackerURL = ""
-license = "MIT"
+license = "{{ license }}"
 
 [[mods]]
 modId = "{{ modid }}"
