--- a/template/{{ forge_path }}/src/main/resources/{{ modid }}.mixins.json.jinja
+++ b/template/{{ forge_path }}/src/main/resources/{{ modid }}.mixins.json.jinja
@@ -1,7 +1,7 @@
 {
   "required": true,
   "package": "{{ package }}.forge.mixin",
-  "compatibilityLevel": "JAVA_17",
+  "compatibilityLevel": "JAVA_{{ java_version }}",
   "minVersion": "0.8",
   "client": [
   ],
