Add hexdoc instructions and inputs

--- a/template/build.gradle.jinja
+++ b/template/build.gradle.jinja
@@ -44,7 +44,7 @@ allprojects {
     apply plugin: "architectury-plugin"
     apply plugin: "maven-publish"
 
-    version = project.modVersion
+    version = project.{{ gradle_mod_version_key }}
     group = project.mavenGroup
 
     repositories {
@@ -145,7 +145,7 @@ ext.getLatestChangelog = {
     return changelog.trim()
 }
 
-ext.bookPath = "data/{{ modid }}/patchouli_books/{{ modid }}book"
+ext.bookPath = "data/{{ modid }}/patchouli_books/{{ book_id_path }}"
 
 tasks.register("viewLatestChangelog") {
     group "documentation"
