--- a/template/gradle.properties.jinja
+++ b/template/gradle.properties.jinja
@@ -10,7 +10,7 @@ asmVersion=9.4
 
 # mod info
 modID={{ modid }}
-modVersion={{ initial_version }}
+{{ gradle_mod_version_key }}={{ initial_version }}
 mavenGroup={{ package }}
 
 # publishing
