Add a link to show off hexdoc's (currently broken) external link feature

--- a/template/{{ common_path }}/src/main/resources/assets/{{ modid }}/lang/en_us.json.jinja
+++ b/template/{{ common_path }}/src/main/resources/assets/{{ modid }}/lang/en_us.json.jinja
@@ -7,7 +7,7 @@
   "{{ modid }}.entry.dummy_spells": "Dummy Spells",
   "{{ modid }}.entry.dummy_actions": "Dummy Actions",
   "{{ modid }}.page.dummy_spells.congrats": "Accepts a player entity, tells them they are doing a good job.",
-  "{{ modid }}.page.dummy_actions.signum": "Accepts a number, returns -1 if it is negative, 0 if 0, 1 if positive.",
+  "{{ modid }}.page.dummy_actions.signum": "Accepts a $(l:casting/101)number/$, returns -1 if it is negative, 0 if 0, 1 if positive.",
   "text.{{ modid }}.congrats": "Good job, %1$s!",
   "text.{{ modid }}.congrats.player": "a Player"
 }
